--- a/config/packages/test/monolog.yaml
+++ b/config/packages/test/monolog.yaml
@@ -2,6 +2,6 @@ monolog:
     handlers:
         main:
             type: stream
-            path: "%kernel.logs_dir%/%kernel.environment%.log"
+            path: "%kernel.logs_dir%/%kernel.environment%_%date%.log"
             level: debug
             channels: ["!event"]
