--- a/config/services.yaml
+++ b/config/services.yaml
@@ -37,3 +37,13 @@ services:
         arguments: [ "@service_container" ]
         tags:
             - { name: kernel.event_listener, event: security.interactive_login, method: onLogin }
+
+    admin.test:
+            class: App\Admin\TestAdmin
+            tags:
+                - { name: sonata.admin, manager_type: orm, group: Test, label: Test }
+            arguments:
+                - null
+                - null
+                - App\Controller\TestCRUDController
+            public: true
