--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -6,6 +6,7 @@ security:
         ROLE_ADMIN:
             - ROLE_USER
             - ROLE_SONATA_ADMIN
+            - ROLE_ADMIN_TEST_LIST
         ROLE_SUPER_ADMIN:
             - ROLE_ADMIN
             - ROLE_ALLOWED_TO_SWITCH
