--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "ext-iconv": "*",
         "ext-intl": "*",
         "backup-manager/symfony": "^2.1",
+        "digitickets/lalit": "^3.1",
         "friendsofsymfony/user-bundle": "^2.1",
         "gregwar/captcha": "^1.1",
         "guzzlehttp/guzzle": "^6.3",
