--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,6 +22,9 @@ services:
     App\:
         resource: '../src/*'
         exclude: '../src/{DependencyInjection,Entity,Migrations,Tests,Kernel.php}'
+    App\Service\:
+        resource: '../src/Service/*'
+        public: true
 
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
