--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -3,8 +3,9 @@ security:
         connection: default
 
     role_hierarchy:
-        ROLE_ADMIN:
+        ROLE_ADMIN_EDITOR:
             - ROLE_USER
+            - ROLE_ADMIN
             - ROLE_SONATA_ADMIN
             - ROLE_ADMIN_TEST_LIST
         ROLE_SUPER_ADMIN:
@@ -71,5 +72,5 @@ security:
         # Secured part of the site
         # This config requires being logged for the whole site and having the admin role for the admin part.
         # Change these rules to adapt them to your needs
-        - { path: ^/admin/, role: [ROLE_ADMIN, ROLE_SONATA_ADMIN] }
+        - { path: ^/admin/, role: ROLE_SONATA_ADMIN }
         - { path: ^/.*, role: IS_AUTHENTICATED_ANONYMOUSLY }
