--- a/config/packages/fos_user.yaml
+++ b/config/packages/fos_user.yaml
@@ -12,5 +12,5 @@ fos_user:
         user_manager: sonata.user.orm.user_manager
 
     from_email:
-        address: 'arybalko@ppr.ru'
-        sender_name: 'arybalko@ppr.ru'
+        address: '%mailer_default_sender_address%'
+        sender_name: '%mailer_default_sender_address%'
