--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,42 @@
 version: '3.1'
 
 services:
-    db:
+    nginx:
+        # используем последний стабильный образ nginx
+        image: nginx:latest
+        container_name: symfony_nginx
+        # маршрутизируем порты
+        ports:
+            - 80:80
+            - 443:443
+        # монтируем директории, слева директории на основной машине, справа - куда они монтируются в контейнере
+        volumes:
+            - /c/server/www/php-symfony-skeleton/server/etc/nginx/conf.d:/etc/nginx/conf.d
+            - /c/server/www/php-symfony-skeleton/server/etc/nginx/nginx.conf:/etc/nginx/nginx.conf
+            - /c/server/www/php-symfony-skeleton:/var/www/symfony/current
+            - /c/server/www/php-symfony-skeleton/var/log/nginx:/var/log/nginx
+        # nginx должен общаться с php контейнером
+        links:
+            - php
+        networks:
+            - symfony_net
+    php:
+        image: php:7.2-fpm
+        container_name: symfony_php
+        # volumes:
+        #     - /c/server/www/php-symfony-skeleton/server/etc/php-fpm.d/www.conf:/etc/php-fpm.d/www.conf
+        #     - /c/server/www/php-symfony-skeleton/server/etc/php.ini:/etc/php.ini
+        links:
+            - mysql
+        networks:
+            - symfony_net
+    mysql:
         image: mysql:5.7
+        container_name: symfony_mysql
         restart: always
         volumes:
-            - ./var/mysql:/var/lib/mysql
+              - symfony_mysql_volume:/var/lib/mysql
         restart: always
-        container_name: symfony_mysql
         environment:
             MYSQL_ROOT_PASSWORD: password
             MYSQL_DATABASE: symfony
@@ -15,3 +44,9 @@ services:
             MYSQL_PASSWORD: password
         ports:
             - 3308:3306
+        networks:
+            - symfony_net
+volumes:
+    symfony_mysql_volume:
+networks:
+    symfony_net:
