--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,13 +9,11 @@ services:
         ports:
             - 80:80
             - 443:443
-        # монтируем директории, слева директории на основной машине, справа - куда они монтируются в контейнере
         volumes:
+            - /c/server/www/php-symfony-skeleton:/var/www/symfony/current
             - /c/server/www/php-symfony-skeleton/server/etc/nginx/conf.d:/etc/nginx/conf.d
             - /c/server/www/php-symfony-skeleton/server/etc/nginx/nginx.conf:/etc/nginx/nginx.conf
-            - /c/server/www/php-symfony-skeleton:/var/www/symfony/current
             - /c/server/www/php-symfony-skeleton/var/log/nginx:/var/log/nginx
-        # nginx должен общаться с php контейнером
         links:
             - php
         networks:
@@ -23,9 +21,12 @@ services:
     php:
         image: php:7.2-fpm
         container_name: symfony_php
-        # volumes:
-        #     - /c/server/www/php-symfony-skeleton/server/etc/php-fpm.d/www.conf:/etc/php-fpm.d/www.conf
-        #     - /c/server/www/php-symfony-skeleton/server/etc/php.ini:/etc/php.ini
+        ports:
+            - 9000:9000
+        volumes:
+            - /c/server/www/php-symfony-skeleton:/var/www/symfony/current
+            - /c/server/www/php-symfony-skeleton/server/etc/php-fpm.d/www.conf:/etc/php-fpm.d/www.conf
+            - /c/server/www/php-symfony-skeleton/server/etc/php.ini:/etc/php.ini
         links:
             - mysql
         networks:
