--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,22 +11,25 @@ services:
             - 443:443
         volumes:
             - /c/server/www/php-symfony-skeleton:/var/www/symfony/current
-            - /c/server/www/php-symfony-skeleton/server/etc/nginx/conf.d:/etc/nginx/conf.d
-            - /c/server/www/php-symfony-skeleton/server/etc/nginx/nginx.conf:/etc/nginx/nginx.conf
+            - /c/server/www/php-symfony-skeleton/docker/etc/nginx/conf.d:/etc/nginx/conf.d
+            - /c/server/www/php-symfony-skeleton/docker/etc/nginx/nginx.conf:/etc/nginx/nginx.conf
             - /c/server/www/php-symfony-skeleton/var/log/nginx:/var/log/nginx
         links:
             - php
         networks:
             - symfony_net
     php:
-        image: php:7.2-fpm
+        build:
+            context: ./docker/php
+            dockerfile: Dockerfile
         container_name: symfony_php
         ports:
             - 9000:9000
         volumes:
             - /c/server/www/php-symfony-skeleton:/var/www/symfony/current
-            - /c/server/www/php-symfony-skeleton/server/etc/php-fpm.d/www.conf:/etc/php-fpm.d/www.conf
-            - /c/server/www/php-symfony-skeleton/server/etc/php.ini:/etc/php.ini
+            - /c/server/www/php-symfony-skeleton/docker/etc/php-fpm.d/www.conf:/etc/php-fpm.d/www.conf
+            - /c/server/www/php-symfony-skeleton/docker/etc/php.ini:/etc/php.ini
+            - /c/server/www/php-symfony-skeleton/var/log/php-fpm:/var/log/php-fpm
         links:
             - mysql
         networks:
@@ -48,6 +51,6 @@ services:
         networks:
             - symfony_net
 volumes:
-    symfony_mysql_volume:
+    symfony_mysql_volume: {}
 networks:
-    symfony_net:
+    symfony_net: {}
