--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -8,12 +8,12 @@ parameters:
 doctrine:
     dbal:
         # configure these for your database server
-        driver: 'pdo_pgsql'
-        server_version: '9.2'
+        driver: 'pdo_mysql'
+        server_version: '5.7'
         charset: utf8
         default_table_options:
             charset: utf8
-            collate: utf8
+            collate: utf8_general_ci
 
         url: '%env(resolve:DATABASE_URL)%'
         types:
