--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,7 +1,6 @@
 FROM php:7.1-fpm
 
-RUN apt-get update && apt-get install -y libpng-dev
-RUN apt-get install -y \
+RUN apt-get update && apt-get install -y \
     libwebp-dev \
     libjpeg62-turbo-dev \
     libpng-dev \
@@ -19,5 +18,6 @@ RUN docker-php-ext-configure gd \
     --enable-gd-native-ttf
 
 RUN docker-php-ext-install gd
+RUN docker-php-ext-install pdo_mysql
 
 RUN pecl install xdebug && docker-php-ext-enable xdebug
