--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -9,7 +9,7 @@ security:
             - ROLE_SONATA_ADMIN
             - ROLE_ADMIN_TEST_LIST
         ROLE_SUPER_ADMIN:
-            - ROLE_ADMIN
+            - ROLE_ADMIN_EDITOR
             - ROLE_ALLOWED_TO_SWITCH
         SONATA:
             - ROLE_SONATA_PAGE_ADMIN_PAGE_EDIT  # if you are using acl then this line must be commented
