--- a/config/routes/routing.yml
+++ b/config/routes/routing.yml
@@ -5,6 +5,11 @@ app_default_index:
     methods:  [GET]
 
 app_default_login:
+    path:     /info
+    defaults: { _controller: App\Controller\DefaultController::infoAction }
+    methods:  [GET, POST]
+
+app_default_login:
     path:     /login
     defaults: { _controller: App\Controller\DefaultController::loginAction }
     methods:  [GET, POST]
