--- a/config/services.yaml
+++ b/config/services.yaml
@@ -42,11 +42,21 @@ services:
             - { name: kernel.event_listener, event: security.interactive_login, method: onLogin }
 
     admin.test:
-            class: App\Admin\TestAdmin
-            tags:
-                - { name: sonata.admin, manager_type: orm, group: Test, label: Test }
-            arguments:
-                - null
-                - null
-                - App\Controller\TestCRUDController
-            public: true
+        class: App\Admin\TestAdmin
+        tags:
+            - { name: sonata.admin, manager_type: orm, group: Test, label: Test }
+        arguments:
+            - null
+            - null
+            - App\Controller\TestCRUDController
+        public: true
+
+    admin.php_info:
+        class: App\Admin\PhpInfoAdmin
+        tags:
+            - { name: sonata.admin, manager_type: orm, group: Test, label: PhpInfo }
+        arguments:
+            - null
+            - null
+            - App\Controller\PhpInfoCRUDController
+        public: true
