--- a/docker/etc/nginx/conf.d/symfony.conf
+++ b/docker/etc/nginx/conf.d/symfony.conf
@@ -8,18 +8,12 @@ server {
         try_files $uri /index.php$is_args$args;
     }
 
-    location ~ ^/index\.php(/|$) {
+    location ~ \.php$ {
         # fastcgi_pass unix:/run/php-fpm/www.sock;
         fastcgi_pass php:9000;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
-        fastcgi_param DOCUMENT_ROOT $realpath_root;
-        internal;
-    }
-
-    location ~ \.php$ {
-        return 404;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 
     location ~ /\.(ht|svn|git|idea) {
